<resources>
    <string name="app_name">Plant Management</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="facebook_app_id">1141995133132815</string>
    <string name="fb_login_protocol_scheme">fb1141995133132815</string>
    <string name="facebook_client_token">af666d97f3da71371b31d4ea47b1c236</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_tag">Created by Tuan Hoang</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_register">Already Register?</string>
    <string name="return_to_home">Return to home</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_tag">Created by Tuan Hoang</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="new_here">New here?</string>
    <string name="register_now">Register now</string>
    <string name="return_to_sign_in">Return to sign in</string>
    <string name="reset">Send email</string>
    <string name="enter_your_email">Enter your email:</string>
    <string-array name="units">
        <item>kg</item>
        <item>g</item>
        <item>ton(s)</item>
        <item>liter(s)</item>
        <item>min(s)</item>
        <item>hour(s)</item>
    </string-array>
    <string-array name="components">
        <item>Quantity</item>
        <item>Fertilize</item>
        <item>Pesticide</item>
        <item>Watering</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Weather -->
    <string name="mic_desc" translatable="false">mic for search</string>
    <string name="day">day</string>
    <string name="pressure">PRESSURE</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="enter_city_name">ENTER CITY NAME</string>
    <string name="updated_at">UPDATED AT</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="calendar">Calendar</string>
    <string name="note_hint">Note</string>
    <string name="add_event_button">ADD</string>
    <string name="select_activity_prompt">Name</string>
    <string name="device">Device</string>
    <string name="no_device">0 Device</string>
    <string name="event_remove_alert_delete">Delete</string>
    <string name='event_remove_alert_cancel'>Cancel</string>
    <string name='event_remove_dialog_message'>Are you want to remove it?</string>
    <string name="default_web_client_id">260375900054-da7o6hsvu5otqa3adfft6f0kbshktvni.apps.googleusercontent.com</string>
</resources>