<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:customAttrs="http://schemas.android.com/apk/res-auto2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ResAuto">

    <PreferenceCategory app:title="Theme">
        <SwitchPreferenceCompat
            app:key="appMode"
            app:switchTextOn="1"
            app:switchTextOff="0"
            >


        </SwitchPreferenceCompat>
    </PreferenceCategory>

    <PreferenceCategory>
        <EditTextPreference
            app:key="version"
            android:title="Version"/>
        <Preference
            app:key="aboutUs"
            app:title="About Us">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>