<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".SignUpActivity">
    <TextView
        android:id="@+id/signUp_tv_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/signUp_tv_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_tag"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/signUp_tv_label"/>

    <LinearLayout
        android:id="@+id/signUp_linearLayout_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/signUp_tv_tag">

        <EditText
            android:id="@+id/signUp_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FAFAC6"
            android:hint="@string/email"
            android:textColorHint="#40000000"
            android:paddingStart="10dp"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginBottom="20dp"
            android:shadowRadius="@integer/material_motion_duration_long_2"/>

        <EditText
            android:id="@+id/signUp_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="#FAFAC6"
            android:hint="@string/password"
            android:textColorHint="#40000000"
            android:paddingStart="10dp"
            android:inputType="textPassword"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/signUp_btn_register"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_template1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/signUp_tv_label_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/already_register"
                android:textAlignment="center"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signUp_tv_returnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="goToSignIn"
                android:text="@string/return_to_sign_in"
                android:textColor="@color/teal_700"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/signUp_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>